sumo/tests/netconvert/errors/XML/broken_edge/edge#length__empty1/errors.netconvert
Error: Empty length definition of edge '1'.
Quitting (on error).
